app-code/scrutiny/scrutiny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrutiny
  namespace: media
  labels:
    app: scrutiny
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: scrutiny
  template:
    metadata:
      labels:
        app: scrutiny
    spec:
      nodeSelector:
        kubernetes.io/hostname: atlantis

      dnsPolicy: ClusterFirst
      
      securityContext:
        seccompProfile:
          type: Unconfined
        appArmorProfile:
          type: Unconfined

      containers:
        - name: scrutiny
          image: ghcr.io/analogj/scrutiny:master-omnibus
          
          # THE FIX: Tell Kubernetes to write crash logs somewhere writable, not in the read-only /dev mount!
          terminationMessagePath: /tmp/termination-log
          
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 8080
              name: webui
          volumeMounts:
            - name: config
              mountPath: /opt/scrutiny/config
            - name: influxdb
              mountPath: /opt/scrutiny/influxdb
            - name: run-udev
              mountPath: /run/udev
              readOnly: true
            - name: dev
              mountPath: /dev
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: scrutiny-config-pvc
        - name: influxdb
          persistentVolumeClaim:
            claimName: scrutiny-db-pvc
        - name: run-udev
          hostPath:
            path: /run/udev
        - name: dev
          hostPath:
            path: /dev
---
apiVersion: v1
kind: Service
metadata:
  name: scrutiny-svc
  namespace: media
spec:
  selector:
    app: scrutiny
  type: NodePort
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
      nodePort: 30880
