app-code/scrutiny/scrutiny-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: scrutiny-ingress
  namespace: media
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`scrutiny.nexus.link`)
      kind: Rule
      middlewares: [{name: authentik-forwardauth, namespace: media}]
      services: [{name: scrutiny-svc, port: 8080}]
